test with old files

--- a/mainDefence/main.tex
+++ b/mainDefence/main.tex
@@ -286,22 +286,28 @@
 Подсистема визуализации встраивается в программный комплекс "Web-Исполнение бюджета". Работа с подсистемой происходит в несколько этапов:\par
 \begin{itemize}
   \item Для начала необходимо создать Аналитический источник данных.\par
-  \begin{figure}[H]
-  \center{\includegraphics[width=17cm]{./imgs/1.png}.}
-  \caption{Интерфейс создания Аналитического источника данных.}
-  \label{ris:image}
-  \end{figure}\par
+%   \begin{figure}[H]
+%   \center{\includegraphics[width=17cm]{./imgs/1.png}.}
+%   \caption{Интерфейс создания Аналитического источника данных.}
+%   \label{ris:image}
+%   \end{figure}\par
   Создание аналитического источника начинается с выбора Идентификатора данных - это модель данных, из которой будет происходить выборка данных. Затем в новый аналитический источник добавляются колонки из модели данных, которые будут использоваться при формировании данных для отчета. После добавления колонок требуется написать события, которые будут отвечать за содержание данных во время подготовки параметров (событие На подготовку параметров), после закачки данных (событие После закачки) после формирования данных.
   \item Далее создается шаблон визуализации в формате .template. Это делается на интерфейсе Администратор отчетов.
-  \begin{figure}[H]
-  \center{\includegraphics[width=17cm]{./imgs/2.png}.}
-  \caption{Интерфейс создания Аналического отчета с кнопкой «Новый шаблон».}
-  \label{ris:image}
-  \end{figure}\par
+%   \begin{figure}[H]
+%   \center{\includegraphics[width=17cm]{./imgs/2.png}.}
+%   \caption{Интерфейс создания Аналического отчета с кнопкой «Новый шаблон».}
+%   \label{ris:image}
+%   \end{figure}\par
   Созданный шаблон можно редактировать на том же интерфейса в Редакторе шаблонов, где можно выбрать наименование диаграммы, наличие на диаграмме легенды и вид диаграммы.
   \item Следующим этапом будет создание нового объекта визуализации на интерфейсе Администратор отчетов. Там выбираются шаблон, источник данных, на основании которых будет строится визуализация и указываются нужные параметры визуализации.
   \item После создания объекта визуализации его можно выполнить на интерфейсе Отчеты. Как и на интерфейса Администратор отчетов, здесь можно править шаблон визуализации с помощью Редактора шаблонов.
-\end{itemize}
+\end{itemize}\par
+Диаграмма вариантов использования подсистемы визуализации аналитических отчетов представлена на рисунке (\hyperref[img1]{Рисунок 1}).
+\begin{figure}[H]
+\center{\includegraphics[width=17cm]{./imgs/1.png}.}
+\label{img1}\caption{Диаграмма вариантов использования.}
+\label{ris:image}
+\end{figure}\par
 
 \subsubsection{Описание и обоснование выбора метода организация входных и выходных данных}
 Входные данные представлены в виде JSON-объекта, который содержит данные из шаблона визуализации, параметры заданные на интерфейсе Администратор отчетов и данных из Аналитического источника. Выбор формата JSON обусловлен следующим:
@@ -334,10 +340,9 @@
 \end{table}\par
 \end{itemize}
 
-
-\subsubsection{Описание и обоснование выбора внутренних структур данных}
-
 \subsubsection{Описание и обоснование выбора состава технических и программных средств}
+Для написания подсистемы визуализации аналитических отчетов будет использован язык Java в связке с JavaScript.\par
+
 
 \subsection{Ожидаемые технико-экономические показатели}
 
