Last well compiled result

--- a/mainDefence/main.tex
+++ b/mainDefence/main.tex
@@ -23,6 +23,9 @@
 \linespread{1.3}
 \renewcommand{\rmdefault}{ftm}
 \usepackage[left=20mm, top=15mm, right=15mm, bottom=15mm, nohead, footskip=10mm]{geometry}
+\setlength{\parskip}{0.5cm}
+\usepackage{ragged2e}
+\justifying
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
@@ -35,7 +38,7 @@
 
 \begin{document}
 
-{\small \tableofcontents \par}
+{\small \setlength{\parskip}{0cm} \tableofcontents \par}
 
 \newpage
 \section*{Введение}
@@ -65,7 +68,7 @@
   \end{tabular}
 \end{table}\par
 Подсистема визуализации - это подсистема, обеспечивающая интеграцию в программный комплекс «Web-Исполнение Бюджета» и процесс создания объекта визуализации.\par
-Компонент визуализации - это компонент подсистемы, который обрабатывает входные данные и преобразовывает их в блок HTML-кода, представляющий собой объект визуализации.\par
+Компонент создания объекта визуализации - это компонент подсистемы, который обрабатывает входные данные и преобразовывает их в блок HTML-кода, представляющий собой объект визуализации.\par
 Объект визуализации - это графическое представление аналитического отчета, диаграмма. Объект визуализации состоит из наименования визуализации, геометрических фигур (точек, линий, фигур различной формы и цвета) и легенды, подписи с использованием цвета, определяющей категорию данных на диаграмме. Так же в зависимости от типа диаграммы может содержать оси, подписи к ним и маркеры осей.\par
 Программный комплекс «Web-Исполнение Бюджета» - это система, в которую предстоит интегрировать подсистему визуализации.\par
 
@@ -266,13 +269,19 @@
 
 \section{Пояснительная записка}
 
+\subsection*{Введение}
+\addcontentsline{toc}{subsection}{Введение}
+Наименование разрабатываемой системы приводится в техническом задании, раздел «2.1.1 Полное наименование системы и ее условное обозначение».\par
+Документы, на основании которых ведется проектирование, приводятся в техническом задании, раздел «2.1.2 Перечень документов, на основании которых создается система».\par
+Стадии и сроки исполнения приведены в техническом задании, раздел «2.1.3 Плановые сроки начала и окончания работы по созданию системы».
+
 \subsection{Назначение и области применения}
 Подсистема визуализации аналитических отчетов обеспечивает создание различных диаграмм. Подсистема используется в системах бизнес-аналитики и предназначена для повышения эффективности и для осуществления более качественного анализа большого количества аналитических данных.
 
 \subsection{Технические характеристики}
 
-\subsubsection{Постановка задачи на разработку программы}
-Полное наименование разрабатываемой подсистемы - подсистема визуализации аналитического отчета в системе бюджетирования.\par
+\subsubsection{Постановка задачи на разработку подсистемы}
+Анализ предметной области выявил необходимость внедрения в программный комплекс «Web-Исполнение бюджета» подсистемы визуализации табличных отчетов, построенных на основе аналитических источников данных.\par
 Разрабатываемая подсистема должна решать следующие задачи:
 \begin{itemize}
   \item обрабатывать и преобразовывать аналитический источник данных в специальный формат;
@@ -282,8 +291,8 @@
   \item интегрировать объект визуализации в программный комплекс «Web-Исполнение бюджета».
 \end{itemize}\par
 
-\subsubsection{Описание общей структурной схемы и функционирования программы}
-Подсистема визуализации встраивается в программный комплекс "Web-Исполнение бюджета". Работа с подсистемой происходит в несколько этапов:\par
+\subsubsection{Описание общей структурной схемы и функционирования подсистемы}
+Подсистема визуализации встраивается в программный комплекс\newline «Web-Исполнение бюджета». Работа с подсистемой происходит в несколько этапов:\par
 \begin{itemize}
   \item Для начала необходимо создать Аналитический источник данных.\par
 %   \begin{figure}[H]
@@ -302,11 +311,16 @@
   \item Следующим этапом будет создание нового объекта визуализации на интерфейсе Администратор отчетов. Там выбираются шаблон, источник данных, на основании которых будет строится визуализация и указываются нужные параметры визуализации.
   \item После создания объекта визуализации его можно выполнить на интерфейсе Отчеты. Как и на интерфейса Администратор отчетов, здесь можно править шаблон визуализации с помощью Редактора шаблонов.
 \end{itemize}\par
-Диаграмма вариантов использования подсистемы визуализации аналитических отчетов представлена на рисунке (\hyperref[img1]{Рисунок 1}).
+Диаграммы вариантов использования подсистемы построения аналитических отчетов до внедрения подсистемы визуализации аналитических отчетов и после ее внедрения представлены на рисунках (\hyperref[ris1]{Рисунок 1} и \hyperref[ris2]{Рисунок 2}).
 \begin{figure}[H]
-\center{\includegraphics[width=17cm]{./imgs/1.png}.}
-\label{img1}\caption{Диаграмма вариантов использования.}
-\label{ris:image}
+\center{\includegraphics[width=17cm]{./imgs/1.png}}
+\caption{Диаграмма вариантов использования до внедрения разрабатываемой подсистемы.}
+\label{ris1}
+\end{figure}\par
+\begin{figure}[H]
+\center{\includegraphics[width=17cm]{./imgs/2.png}}
+\caption{Диаграмма вариантов использования после внедрения разрабатываемой подсистемы.}
+\label{ris2}
 \end{figure}\par
 
 \subsubsection{Описание и обоснование выбора метода организация входных и выходных данных}
@@ -316,7 +330,7 @@
 \item Формат JSON удобнее обрабатывать языком JavaScript, в отличие от других форматов передачи данных.
 
 \begin{table}[H]
-\caption{Сравненеи разбора JSON, XML и YAML объектов на языке JavaScript.}
+\caption{Сравнениек разбора JSON, XML и YAML объектов на языке JavaScript.}
 \centering
   \begin{tabular}{|c|c|c|c|}
   \hline
@@ -341,10 +355,94 @@
 \end{itemize}
 
 \subsubsection{Описание и обоснование выбора состава технических и программных средств}
-Для написания подсистемы визуализации аналитических отчетов будет использован язык Java в связке с JavaScript.\par
+Для написания компонентов интеграции подсистемы визуализации аналитических отчетов в программный комплекс «Web-Исполнение бюджета» использован язык Java, а в качестве языка для написания клиентских и серверных скриптов использован язык JavaScript. Обосновано это тем, что программный комплекс «Web-Исполнение бюджета» является web-приложением, серверная часть которого написана на языке Java, а все взаимодействие JavaScript и HTML на стороне клиента происходит с помощью JavaScript-библиотеки jQuery.\par
+В качестве инструмента для написания компонента создания объекта визуализации используется JavaScript-библиотека D3.js. D3.js – это самый низкоуровневый инструмент для работы с языком разметки svg. Библиотека, в отличие от своих многочисленных аналогов, объединяет работу с SVG (базисом для работы с этим языком разметки является SVG API), CSS и DOM моделью, что является большим плюсом для программного комплекса "Web-Исполнение бюджета", которое является web-приложением. В отличие от своих аналогов библиотека предоставляет синтаксис схожий с синтаксисом JavaScript-библиотеки jQuery, что актуально для программного комплекса "Web-Исполнение бюджета", являющимся web-приложением. Большинство библиотек визуализации предоставляют готовые шаблоны для визуализации и не дают гибкого инструмента для построения своих шаблонов. D3.JS не имеет готовых реализаций шаблонов, но у нее есть огромная библиотека с примерами, написанными с ее помощью.\par
+Таким образом D3.JS была выбрана в качестве основного средства построения визуализации в подсистеме.
+
+\subsection{Описание программы}
+
+\subsubsection{Общие сведения}
+Пользователь имеет возможность создания визуализации аналитического отчета на основе заранее сформированного разработчиком аналитического источника данных и настроенного им же объекта визуализации.\par
+Технология создания аналитического источника данных выглядит в виде таблицы, в которой разработчику предоставляется возможность установить наименование аналитического источника, написать события на языке JavaScript, которые будут отвечать за содержание данных во время подготовки параметров (событие На подготовку параметров), после закачки данных (событие После закачки) после формирования данных. В детализации требуется указать секции, из которых будут выкачиваться данные и колонки, то есть какие именно данные будут обрабатываться событиями.\par
+После создания аналитического источника разработчику необходимо создать шаблон и объект визуализации. Технология создания шаблона выглядит в виде модального окна, где задаются параметры будущей визуализации, такие как:
+\begin{itemize}
+\item наименование диаграммы;
+\item флаг указывающий наличие на диаграмме легенды;
+\item наименования осей диаграммы;
+\item вид диаграммы.
+\end{itemize}\par
+Когда шаблон визуализации заполнен и сохранен требуется создать непосредственно объект визуализации. Для этого разработчику нужно выбрать и заполнить номер отчет, который будет содержать комбинацию групп цифр относящих его к определенной группе, наименование отчета, выбрать из списка шаблонов созданный ранее шаблон визуализации, так же выбрать формат отчета, то есть, в нашем случае, диаграмму (d3\_diagram) и выставить флаг использования (или снять флаг для внесения изменений в объект визуализации. Детализация содержит форму добавления аналитического источника данных из списка существующих и форму добавления пользовательских параметров для передачи механизму построения аналитического отчета или подсистеме визуализации аналитических отчетов.\par
+Когда пользователь запускает процесс построения визуализации, в действие приводятся написанные разработчиком события, формирующие аналитические данные, выбираются пользовательские параметры объекта аналитичекого отчета и параметры из шаблона визуализации. После того, как аналитические данные полностью сформировались, они формируются в JSON-объект вместе с пользовательскими параметрами объекта аналитичекого отчета и параметрами из шаблона визуализации и передаются компоненте построения визуализации.
+
+\subsubsection{Программное обеспечение, необходимое для функционирования программы}
+Для функционирования подсистемы необходима актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии JavaScript 1.7 и старше). При использовании ЭП – криптографическое ПО.
+
+\subsubsection{Используемые при разработке языки программирования и инструментальные средства}
+Java – объектно–ориентированный структурный императивный язык программирования со строгой полиморфной статической явной системой типов. Программы на Java транслируются в байт-код, что делает их практически не зависимыми от операционной системы.\par
+JavaScript – это скриптовый язык, предназначенный для создания интерактивных веб-страниц. Его не требуется компилировать, он подключается к HTML-странице и работает "как есть". JavaScript обычно используется как встраиваемый язык для программного доступа к объектам приложений. Наиболее широкое применение находит в браузерах как язык сценариев для придания интерактивности веб-страницам.\par
+В качестве СУБД применяется PostgreSQL. Для организации версионного хранилища используется система контроля версий Mercurial (Hg) и TortoiseHg в качестве графического фронтенда.\par
+Для визуализации табличного аналитического отчета, то есть построения диаграммы была использована JavaScript библиотека D3.js.\par
+D3.js (название D3 расшифровывается как data driven document) - это JavaScript-библиотека для обработки и визуализации данных. Она предоставляет удобные утилиты для обработки и загрузки массивов данных и создания DOM-элементов.
+
+\subsubsection{Функциональное назначение}
+Функциональные возможности подсистемы визуализации аналитического отчета:\par
+\begin{itemize}
+  \item возможность преобразовывать аналитический источник данных в удобный для передачи и чтения компонентом визуализации формат;
+  \item возможность запрашивать у пользователя параметры визуализации (наименование визуализации, названия осей, тип визуализации);
+  \item возможность объединения собранных данных в удобный для передачи и чтения компонентом визуализации формат;
+  \item возможность построения объекта визуализации, который должен содержать:
+    \begin{itemize}
+    	\item наименование визуализации;
+        \item легенду, указывающую описание к маркерам данных;
+    	\item оси и подписи к ним, если выбрана столбчатая диаграмма или график;
+        \item метки осей - категории, которые задают положение конкретных значений в ряде данных;
+    \end{itemize}
+  \item возможность интеграции объекта визуализации в программный комплекс «Web-Исполнение бюджета».
+\end{itemize}\par
+
+\subsubsection{Структура программы (модули, классы)}
+Структура разработанной подсистемы визуализации аналитических источников представленна на рисунках \hyperref[umlClassDiagram:ris1]{Рисунок 1} и \hyperref[umlClassDiagram:ris2]{Рисунок 2}.
+\begin{figure}[H]
+\center{\includegraphics[width=17cm]{./imgs/FullDiagramDesigner.png}}
+\caption{UML-диаграмма классов разрабатываемой подсистемы.}
+\label{umlClassDiagram:ris1}
+\end{figure}\par
+\begin{figure}[H]
+\center{\includegraphics[width=8cm]{./imgs/FullDiagramDesigner_2.png}}
+\caption{UML-диаграмма классов разрабатываемой подсистемы.}
+\label{umlClassDiagram:ris2}
+\end{figure}\par
 
 
-\subsection{Ожидаемые технико-экономические показатели}
 
 \end{document} % Конец текста.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
