--- a/mainDefence/main.tex
+++ b/mainDefence/main.tex
@@ -26,6 +26,7 @@
 \setlength{\parskip}{0.5cm}
 \usepackage{ragged2e}
 \justifying
+\pretolerance10000
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
@@ -412,8 +413,29 @@ D3.js (название D3 расшифровывается как data driven d
 \caption{UML-диаграмма классов разрабатываемой подсистемы.}
 \label{umlClassDiagram:ris2}
 \end{figure}\par
+В классе ReportForm происходит вызов скриптового файла executeReport.st, который, в свою очередь, выполняет две основные функции:
+\begin{itemize}
+\item вызывает метод d3Document класса D3DiagramController, в который передает идентификатор выбранного объекта визуализации. В методе происходит запрос аналитического источника данных из текущей сессии, его обработка в JSON-объект, так же в этом методе происходит обработка шаблона визуализации и пользовательских параметров. После того, как все данные были обработаны, они объединяются в JSON-объект и передаются обратно в executeReport.st.
+\item когда executeReport.st получил JSON-объект со всеми необходимыми для построения объекта визуализации данными, он передает их в класс D3ReportForm, в котором происходит передача этого объекта в JavaScript-функцию ctrlD3Report.js, написанную с использованием JavaScript-библиотеки D3.js и выполняющую непосредственное построение объекта визуализации аналитического отчета.
+\end{itemize}
+В классе D3DiagramController, кроме d3Document, есть еще два метода: getDiagramTypeList и saveTemplate. Первый метод - это геттер для получения списка всех доступных типов диаграмм. Второй метод выполняет сохранение заполненного шаблона визуализации на Редакторе шаблонов. Здесь происзодит обработка полученных с редактора данных и сохранение в ранее созданный файл шаблона с расшинением .template с обработкой возможных исключений и ошибок.\par
+Метод ctrlD3Report из JavaScript-файла ctrlD3Report.js написан с использованием JavaScript-библиотеки D3.js и занимается непосредственным построением визуализации. Этот метод имеет четыре внутренних метода:
+\begin{itemize}
+\item метод onLoad принимает на вход два аргумента: diagramPanel - html-объект в котором будет происходить отображение объекта визуализации и jsonString - JSON-объект со всеми необходимыми для построения объекта визуализации данными (пользовательские параметры, параметры с шаблона визуализации и JSON-объект, полученный при обработке аналитического источника данных. Метод инициализирует начальные параметры, такие как высота и ширина диаграммы, отступы от краев html-объект diagramPanel. Метод так же разделяет данные jsonString на аналитические данные и пользовательские параметры, определяет тип строящейся диаграммы.
+\item методы graphic, bar\_char и circle\_char принимают некоторые основные параметры, заданные в методе onLoad, и создают объект визуализации в зависимости от выбранной во время выполнения метода onLiad типа диаграммы.
+\end{itemize}
+Интерфейс TemplateInfo и его реализация TemplateInfoForm - это классы, которые содержат и предоставляют информацию о шаблонах. Здесь есть следующие методы и поля:
+\begin{itemize}
+\item метод getName возвращает наименование визуализации;
+\item метод getTemplateName возвращает имя файла шаблона (без расширения);
+\item метод getFormat возвращает формат шаблона, его расширение, отвечающее за принадлежность шаблона к определенному виду отчета.
+\item метод isD3Diagram принимает на вход объект класса TemplateInfo, и возвращает флаг, говорящий о принадлежности объекта к объекту визуализации.
+\item поле formats содержит список всех форматов отчетов, доступных в программном комплексе «Web-Исполнение бюджета».
+\end{itemize}
 
+\section{Эксплуатационная документация}
 
+\subsection{Руководство системного программиста}
 
 \end{document} % Конец текста.
 
