--- a/economic/economic.tex
+++ b/economic/economic.tex
@@ -59,17 +59,18 @@ Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - эт
 Расчет себестоимости подсистемы определяется суммированием расходов по следующим пунктам:
 \begin{itemize}
 \item основная заработная плата;
-\item размер отчислений  единого социального налога (ЕСН);
+\item размер социальных отчислений;
 \item накладные расходы;
 \item материальные затраты;
-\item затраты на машинное время.
+\item затраты на машинное время;
+\item прочие затраты.
 \end{itemize}
 Далее производится расчет затрат по каждому пункту.\par
 
 \subsubsection{Материальные затраты}
 Материальные затраты – вид затрат, образующих себестоимость продукции, и представляющий расходы, осуществленные на приобретение необходимых для производства товаров (выполнения работ, оказания услуг) расходуемых материальных ресурсов.\par
 В рамках данной разработки материальные затраты представлены расходами на бумагу, оплата доступа в Интернет и т.п.\par
-Расходы на бумагу и прочее можно считать незначительными и пренебречь ими. Доступ в интернет предоставляется по тарифу 550 рублей в месяц. Разработка велась 4 месяца; таким образом, материальные затраты составили 550$\times$3=1650 (руб.).
+Расходы на бумагу и прочее можно считать незначительными и пренебречь ими. Доступ в интернет предоставляется по тарифу 550 рублей в месяц. Разработка велась 3 месяца; таким образом, материальные затраты составили 550$\times$3=1650 (руб.).
 
 \subsubsection{Основная заработная плата}
 Размер основной заработной платы (ОЗП) определяется окладом инженера-программиста, количеством разработчиков и сроками разработки:\par
@@ -86,19 +87,20 @@ T – число месяцев разработки (3 месяцев).\par
 \end{equation}\par
 Размер  ОЗП = 49500 руб.
 
-\subsubsection{Единый социальный налог}
+\subsubsection{Социальные отчисления}
 Отчисления на социальные нужды производятся согласно Федеральному закону №212-ФЗ «О страховых взносах в Пенсионный фонд Российской Федерации, Фонд социального страхования Российской Федерации, Федеральный фонд обязательного медицинского страхования (редакция от 02.04.2014)», который устанавливает следующие тарифы страховых взносов:
 \begin{itemize}
   \item Пенсионный фонд Российской Федерации - 22\%;
   \item Фонд социального страхования Российской Федерации - 2,9\%;
   \item Федеральный фонд обязательного медицинского страхования - 5,1\%;
 \end{itemize}\par
-Суммарный процент отчислений составляет:
+Суммарный процент социальных отчислений $C_o$ составляет $22\% + 2.9\% + 5.1\%$. Соответственно, размер социальных отчислений предриятия на заработную плату равенн:
 \begin{equation}
 \label{form3}
-	C_o = 22 + 2.9 + 5.1 = 30\%
+	\text{О}_\text{соц} = \text{ЗП}\times C_o = \text{ЗП}\times 30\%
 \end{equation}\par
-Сумма затрат предприятия на заявленную заработную плату работников составляет 14850 рублей (30\% от ОЗП).
+Получаем, что $\text{О}_\text{соц}$ = 14859 (руб.)\par
+Сумма затрат предприятия на заявленную заработную плату работников составляет:
 \begin{equation}
 \label{form4}
 	\text{Р}_\text{ЗП}=\text{ЗП}\times(1+C_o)
@@ -108,7 +110,6 @@ T – число месяцев разработки (3 месяцев).\par
 \label{form5}
 	\text{Р}_\text{ЗП}=49500\times(1+0.3)
 \end{equation}\par
-Получаем, что $\text{О}_\text{есн}$ = 64350 (руб.)\par
 
 \subsubsection{Затраты на машинное время}
 Расходы на машинное время с учетом наличия 254 дней в году определяются по формуле:\par
@@ -124,11 +125,22 @@ T – число месяцев разработки (3 месяцев).\par
 \label{form7}
 	\text{Счмв}=\frac{\text{Цк}}{\text{Ссл}\times 254\times \text{Вэд}}+\text{РЭ}
 \end{equation}
-где Цк – покупная цена компьютера, руб;\par
+где $\text{Ц}_\text{ро}$ – цена рабочего окружения (покупная цена программного и аппаратного обеспечения), руб;\par
 Ссл – срок службы компьютера, лет;\par
 Вэд – время эксплуатации ЭВМ в день, час;\par
 Рэ – эксплуатационные расходы, руб./час.\par
+Покупная цена программного и аппаратного обеспечения составляет сумму цены компьютера, цены операционной системы и цены среды разработки:
+\begin{equation}
+	\text{Ц}_\text{ро} = \text{Ц}_\text{к}+\text{Ц}_\text{OS}+\text{Ц}_\text{ср}
+\end{equation}
+где $\text{Ц}_\text{ро}$ – цена рабочего окружения;
+$\text{Ц}_\text{к}$ – цена компьютера с учетом всех комплектующих (35000 руб.);
+$\text{Ц}_\text{OS}$ – цена операционной системы (9000 руб.);
+$\text{Ц}_\text{ср}$ – цена среды разработки (840 руб. в месяц $\times$ 3 месяца = 2520 руб.).
 Эксплуатационные расходы Pэ вычисляются по формуле:\par
+\begin{equation}
+	\text{Ц}_\text{ро} = 35000+9000+2520=46520
+\end{equation}
 \begin{equation}
 \label{form8}
 	\text{Рэ}=\text{Сэ}\times \text{Р}=4\times 0.3\approx 1.2 \text{ руб./час}
@@ -138,7 +150,7 @@ T – число месяцев разработки (3 месяцев).\par
 Рассчитаем стоимость одного часа машинного времени:\par
 \begin{equation}
 \label{form9}
-	\text{Счмв}=\frac{40000}{8\times 246\times 3}+1.2 = 7.9\text{ руб./час}
+	\text{Счмв}=\frac{46520}{8\times 246\times 3}+1.2 = 9.07\text{ руб./час}
 \end{equation}\par
 Возьмем среднее значение рабочих дней в месяц (21 день), время работы вычислительной машины равно 21$\times$3 = 63 (дня), то есть в часах время использования ЭВМ составит:\par
 \begin{equation}
