--- a/economic/economic.tex
+++ b/economic/economic.tex
@@ -99,7 +99,7 @@ T – число месяцев разработки (3 месяцев).\par
 \label{form3}
 	\text{О}_\text{соц} = \text{ЗП}\times C_o = \text{ЗП}\times 30\%
 \end{equation}\par
-Получаем, что $\text{О}_\text{соц}$ = 14859 (руб.)\par
+Получаем, что $\text{О}_\text{соц}$ = 14850 (руб.)\par
 Сумма затрат предприятия на заявленную заработную плату работников составляет:
 \begin{equation}
 \label{form4}
@@ -133,10 +133,10 @@ T – число месяцев разработки (3 месяцев).\par
 \begin{equation}
 	\text{Ц}_\text{ро} = \text{Ц}_\text{к}+\text{Ц}_\text{OS}+\text{Ц}_\text{ср}
 \end{equation}
-где $\text{Ц}_\text{ро}$ – цена рабочего окружения;
-$\text{Ц}_\text{к}$ – цена компьютера с учетом всех комплектующих (35000 руб.);
-$\text{Ц}_\text{OS}$ – цена операционной системы (9000 руб.);
-$\text{Ц}_\text{ср}$ – цена среды разработки (840 руб. в месяц $\times$ 3 месяца = 2520 руб.).
+где $\text{Ц}_\text{ро}$ – цена рабочего окружения;\par
+$\text{Ц}_\text{к}$ – цена компьютера с учетом всех комплектующих (35000 руб.);\par
+$\text{Ц}_\text{OS}$ – цена операционной системы (9000 руб.);\par
+$\text{Ц}_\text{ср}$ – цена среды разработки (840 руб. в месяц $\times$ 3 месяца = 2520 руб.).\par
 Эксплуатационные расходы Pэ вычисляются по формуле:\par
 \begin{equation}
 	\text{Ц}_\text{ро} = 35000+9000+2520=46520
@@ -160,7 +160,7 @@ $\text{Ц}_\text{ср}$ – цена среды разработки (840 руб
 Следовательно, можно найти расходы на машинное время:
 \begin{equation}
 \label{form11}
-	\text{Мвр}=\text{Счмв}\times\text{ВРм}=7.9\times 288 = 2296.8\text{ (руб.)}
+	\text{Мвр}=\text{Счмв}\times\text{ВРм}=9.07\times 288 = 2612.16\text{ (руб.)}
 \end{equation}
 \subsubsection{Накладные расходы}
 В накладных расходах учитываются расходы на управление, коммунальные услуги, аренду помещения. Величина накладных расходов определяется в процентах от основной заработной платы, составляет 30\%, т.е. 14850 рублей:
@@ -181,7 +181,7 @@ $\text{Ц}_\text{ср}$ – цена среды разработки (840 руб
 \label{form13}
 	\text{ПР}=(\text{МЗ}+\text{ОЗП}+\text{О}_\text{есн}+\text{Мвр}+\text{Р}_\text{Н})\times 0.25
 \end{equation}
-$$\text{ПР}=(1650+49500+64350+2217.6+14850)\times 0.25=3314.19\text{ (руб.)}$$
+$$\text{ПР}=(1650+49500+14850+2612.16+14850)\times 0.025=2086.55\text{ (руб.)}$$
 
 \subsubsection{Определение себестоимости разрабатываемой подсистемы}
 Себестоимость разработки программного средства представляет собой сумму затрат по экономическим элементам, приведенным в таблице 1.\par
@@ -193,14 +193,15 @@ $$\text{ПР}=(1650+49500+64350+2217.6+14850)\times 0.25=3314.19\text{ (руб.)
   Затраты & Сумма, руб. \\\hline
   Материальные затраты & 1650 \\\hline
   Основная заработная плата & 49500 \\\hline
-  Единый социальные налог & 64350 \\\hline
-  Затраты на машинное время & 2217.60 \\\hline
+  Социальные отчисления & 14850 \\\hline
+  Затраты на машинное время & 2612.16 \\\hline
   Накладные расходы & 14850 \\\hline
-  Итог: & 132567.60 \\
+  Прочие затраты & 2086.55 \\\hline
+  Итог: & 85548.71 \\
   \hline
   \end{tabular}
 \end{table}\par
-Таким образом, стоимость разработки составила 132567.60 (руб.).\par
+Таким образом, стоимость разработки составила 85548.71 (руб.).\par
 
 \subsubsection{Определение цены разрабатываемой подсистемы}
 Разрабатываемая подсистема попадает в следующую версию «Web-Исполнения бюджета». На данный момент заказ на неё оформлен 8 заказчиками.\par
