--- a/economic/economic.tex
+++ b/economic/economic.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper]{extarticle}
 
-\usepackage[12pt]{extsizes}
+\usepackage[14pt]{extsizes}
 \usepackage{comment}
 \usepackage{enumitem}
 \usepackage{hyperref}
@@ -22,6 +22,9 @@
 \linespread{1.3}
 \renewcommand{\rmdefault}{ftm}
 \usepackage[left=20mm, top=15mm, right=15mm, bottom=15mm, nohead, footskip=10mm]{geometry}
+\usepackage{ragged2e}
+\justifying
+\pretolerance10000
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
@@ -203,26 +206,58 @@ $$\text{ПР}=(1650+49500+14850+2612.16+14850)\times 0.025=2086.55\text{ (руб
 \end{table}\par
 Таким образом, стоимость разработки составила 85548.71 (руб.).\par
 
-\subsubsection{Определение цены разрабатываемой подсистемы}
-Разрабатываемая подсистема попадает в следующую версию «Web-Исполнения бюджета». На данный момент заказ на неё оформлен 8 заказчиками.\par
-Рассчитаем рекомендуемую цену:\par
-\begin{equation}
-\label{form9}
-	\text{Цр}=\frac{\text{Себ}\times (1+\text{Нпр})+(\text{Себ}\times(1+\text{Нпр})-\text{НР})\times \text{НДС}}{8}
-\end{equation}\par\vspace{1cm}
-где Нпр – норматив прибыли (10\%);\par
-НР – накладные расходы;\par
-НДС – налог на добавленную стоимость (18\%);\par
-Себ – себестоимость разработки.\par
-1З – количество заказчиков;\par
-\begin{equation}
-\label{form9}
-	\text{Цр}=\frac{132567.60\times (1+0.1)+(132567.60\times (1+0.1)-14850)\times 0.18}{8}=5929.7\text{(руб.)}
-\end{equation}
-Итак, рекомендуемая цена подсистемы равна 5929.7 (руб.).\par
+\subsection{Оценка эффекта от продажи подсистемы}
 
-\subsubsection{Оценка возможных результатов от использования}
-Внедрение разработанной подсистемы позволяет расширить возможности «Web-Исполнения бюджета». Благодаря данной подсистеме увеличивается интеграция «Web-Исполнения бюджета» в схему Единого Регионального Бюджета, что является прямым продолжением политики ООО «НПО «Криста».\par
-С точки зрения пользователя, использование данного модуля повышает качество анализа данных, не нарушая тем самым свободы взаимодействия с данными. Поскольку вызов подсистемы, построение визуализации по готовому Аналитическому источнику данных, осуществляется минимальным нажатием на кнопку, расположенную на панели кнопок интерфейса «Отчеты», использование подсистемы для пользователя представляет абсолютно тривиальную задачу, не требующую особых усилий и времени на обучение.
+\subsubsection{Расчет прибыли от продажи одной копии подсистемы}
+Разрабатываемая подсистема попадает в следующую версию программного комплекса «Web-Исполнения бюджета». На данный момент заказ на неё оформлен 8 заказчиками:\par
+\begin{table}[H]
+\caption{Заказчики, согласившиеся включить в следющее обновление разработанную подсистему}
+\centering
+  \begin{tabular}{|c|c|}
+  \hline
+  № & Наименование \\\hline
+  1 & Долгопрудный (ФУ) Московская обл. \\\hline
+  2 & Ленинский район (ФУ) Московская обл. \\\hline
+  3 & Можайский район (ФКУ) Московская обл. \\\hline
+  4 & Орехово-Зуево (ФУ ГО) Московская обл. \\\hline
+  5 & Подольск (ФУ) Московская обл. \\\hline
+  6 & Пушкинский р-н (КФНП) Московская обл. \\\hline
+  7 & Фрязино (ФУ) Московская обл. \\\hline
+  8 & Электросталь (ФУ) Московская обл. \\\hline
+  \end{tabular}
+\end{table}\par
+
+Расчет прибыли от продажи одной копии подсистемы осуществляется по следующей формуле:
+\begin{equation}
+\label{form13}
+	\text{П}_\text{ед}=\text{Ц}-\text{НДС}-\frac{\text{З}_\text{р}}{N}
+\end{equation}
+где $\text{П}_\text{ед}$ - прибыли от продажи одной копии;\par
+$\text{Ц}$ - цена одной копии;\par
+$\text{НДС}$ - налог на добавленную стоимость;\par
+$\text{З}_\text{р}$ - затраты на реализацию;\par
+N - количество заказчиков.\par
+Расчитаем НДС:
+\begin{equation}
+\label{form14}
+	\text{НДС}=\frac{\text{Ц}\times \text{\%НДС}}{100\%+18\%}=\frac{\text{Ц}\times \text{\%НДС}}{100\%+18\%}
+\end{equation}
 
 \end{document}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
