Major update of economic part

--- a/economic/economic.tex
+++ b/economic/economic.tex
@@ -115,7 +115,7 @@ T – число месяцев разработки (3 месяцев).\par
 \end{equation}\par
 
 \subsubsection{Затраты на машинное время}
-Расходы на машинное время с учетом наличия 254 дней в году определяются по формуле:\par
+Расходы на машинное время с учетом наличия 246 дней в году определяются по формуле:\par
 \begin{equation}
 \label{form6}
 	\text{Мвр}=\text{Счмв}\times \text{ВР}_\text{м}
@@ -126,7 +126,7 @@ T – число месяцев разработки (3 месяцев).\par
 Стоимость одного часа машинного времени можно рассчитать по формуле:\par
 \begin{equation}
 \label{form7}
-	\text{Счмв}=\frac{\text{Цк}}{\text{Ссл}\times 254\times \text{Вэд}}+\text{РЭ}
+	\text{Счмв}=\frac{\text{Цк}}{\text{Ссл}\times 246\times \text{Вэд}}+\text{РЭ}
 \end{equation}
 где $\text{Ц}_\text{ро}$ – цена рабочего окружения (покупная цена программного и аппаратного обеспечения), руб;\par
 Ссл – срок службы компьютера, лет;\par
@@ -237,11 +237,33 @@ $\text{Ц}$ - цена одной копии;\par
 $\text{НДС}$ - налог на добавленную стоимость;\par
 $\text{З}_\text{р}$ - затраты на реализацию;\par
 N - количество заказчиков.\par
+Цену одной копии возьмем примерно равно 20\% от себестоимости, что равно 17000 руб.
 Расчитаем НДС:
 \begin{equation}
 \label{form14}
-	\text{НДС}=\frac{\text{Ц}\times \text{\%НДС}}{100\%+18\%}=\frac{\text{Ц}\times \text{\%НДС}}{100\%+18\%}
+	\text{НДС}=\frac{\text{Ц}\times \text{\%НДС}}{100\%+18\%}=\frac{17000\times 18\%}{100\%+18\%}=2609,9 \text{ (руб.)}
+\end{equation}\par
+Расчитаем затраты на реализацию, которые составляют 10\% от себестоимости разработки:
+\begin{equation}
+\label{form15}
+	85548,71\times 0,1 = 8554.87 \text{ (руб.)}
+\end{equation}\par
+Таким образом прибыль от продажи одной копии будет составлять:
+\begin{equation}
+\label{form16}
+	\text{П}_\text{ед}=17000-2609,9-\frac{85548.71+8554.87}{8}=2627.15\text{ (руб.)}
 \end{equation}
+Затраты на разработку и реализацию составляют 85548.71 и 8554.87 (руб.) соответственно. Доход от продажи одной копии подсистемы составляет:\par
+\begin{equation}
+\label{form17}
+	\text{Ц}-\text{\%НДС} = 17000-2609,9 = 14390.1 \text{ (руб.)}
+\end{equation}\par
+Рассчитаем количество копий, которые необходимо продать для окупаемости затрат:\par
+\begin{equation}
+\label{form18}
+	\frac{85548.71+8554.87}{14390.1}=7 \text{ (копий)}
+\end{equation}
+После 7 проданных заказчикам копий, дальнейшие продажи будут приносить прибыль.
 
 \end{document}
 
