--- a/mainDefence/main.tex
+++ b/mainDefence/main.tex
@@ -10,24 +10,33 @@
 \usepackage{listings}
 \usepackage{mathptmx}
 \usepackage{amsmath, amsfonts}
+\usepackage{titlesec}
 \usepackage{indentfirst}
 \usepackage{graphicx}
-\usepackage[T1]{fontenc}
-\usepackage{fbb}
-% \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
 \renewcommand{\labelitemi}{–}
 \renewcommand{\labelenumii}{\theenumii}
 \renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
 
+\setcounter{secnumdepth}{4}
+\titleformat{\paragraph}
+{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
+\titlespacing*{\paragraph}
+{0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
+
+\setlist[enumerate,itemize]{leftmargin=0pt,itemindent=2.7em}
+
 \linespread{1.3}
 \renewcommand{\rmdefault}{ftm}
 \usepackage[left=20mm, top=15mm, right=15mm, bottom=15mm, nohead, footskip=10mm]{geometry}
-\setlength{\parskip}{0.5cm}
+% \setlength{\parskip}{0.5cm}
 \usepackage{ragged2e}
 \justifying
-\pretolerance10000
+\sloppy
+\hyphenpenalty=10000
+\clubpenalty=10000
+\widowpenalty=10000
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
@@ -93,24 +102,26 @@
 \subsection{Обзор аналогов}
 При изучении рынка программных продуктов был выявлен ряд программных продуктов, которые выполняют схожие с моей подсистемой функции.
 
-\section{Техническое задание}
+\section{Программная документация}
 
-\subsection{Общие сведения}
+\subsection{Техническое задание}	
 
-\subsubsection{Полное наименование подсистемы и ее условное обозначение}
+\subsubsection{Общие сведения}
+
+\paragraph{Полное наименование подсистемы и ее условное обозначение}
 Разработка подсистемы визуализации аналитических отчетов в системе бюджетирования.
 
-\subsubsection{Перечень документов, на основании которых создается подсистема, кем и когда утверждены эти документы}
+\paragraph{Перечень документов, на основании которых создается подсистема, кем и когда утверждены эти документы}
 Основанием для разработки "Планировщик выполнения заданий по расписанию" являются следующие документы и нормативные акты:\par
 Задание на дипломный проект (приказ №    от    )
 
-\subsubsection{Плановые сроки начала и окончания работы по созданию подсистемы}
+\paragraph{Плановые сроки начала и окончания работы по созданию подсистемы}
 Плановый срок начала работ по созданию "Планировщик выполнения заданий по расписанию" – 15 апреля 2017 года. Плановый срок окончания работ по созданию "Планировщик выполнения заданий по расписанию" – 15 июня 2017 года.
 
-\subsubsection{Порядок оформления и предъявления заказчику результатов работ по созданию подсистемы}
+\paragraph{Порядок оформления и предъявления заказчику результатов работ по созданию подсистемы}
 Подсистема представляется в виде части программного продукта "Web-Исполнение бюджета" и не может быть использована вне пределов этой системы.
 
-\subsubsection{Перечень нормативно-технических документов, методических материалов, использованных при разработке ТЗ}
+\paragraph{Перечень нормативно-технических документов, методических материалов, использованных при разработке ТЗ}
 При разработке автоматизированной системы и создании проектно-эксплуатационной документации Исполнитель должен руководствоваться требованиями следующих нормативных документов:
 \begin{itemize}
   \item ГОСТ 19.201-78. ТЕХНИЧЕСКОЕ ЗАДАНИЕ. ТРЕБОВАНИЯ К СОДЕРЖАНИЮ И ОФОРМЛЕНИЮ;
@@ -118,13 +129,62 @@
   \item РД 50-34.698-90. Методические указания. Информационная технология. Комплекс стандартов на автоматизированные системы. Автоматизированные системы. Требования к содержанию документов.
 \end{itemize}
 
-\subsection{Назначение разработки}
+\subsubsection{Назначение разработки}
 Назначением подсистемы является предоставление пользователю возможности более эффективного анализа данных.
 
-\subsection{Цель создания подсистемы}
+\subsubsection{Цель создания подсистемы}
 Целью создания подсистемы визуализации отчета является возможность визуализации аналитических данных в web-браузере с использованием различных видов диаграмм. Совместимость с технической платформой автоматизированной системы "Web-Исполнение бюджета". Поддержка корректной работы в актуальных версиях браузеров Mozilla Firefox, Yandex Browser, Google Chrome.
 
-\subsection{Требования к системе}
+\subsubsection{Требования к системе}
+
+\paragraph{Требования к характеристикам взаимосвязей создаваемой системы со смежными системами}
+Подсистема визуализации отчетов должен взаимодействовать со следующими интерфейсами программного комплекса «Web-Исполнения бюджета»:\par
+\begin{itemize}
+  \item интерфейс создания и управления аналитическими источниками данных;
+  \item интерфейс администрирования аналитических отчетов;
+  \item интерфейс отображения аналитических отчетов.
+\end{itemize}\par
+Возможны следующие варианты взаимодействия с программным комплексом «Web-Исполнения бюджета»:
+\begin{itemize}
+  \item создание аналитического источника данных на интерфейсе создания и управления аналитическими источниками данных;
+  \item заполнение шаблона визуализации отчета пользовательскими параметрами;
+  \item создание объекта визуализации посредством интерфейса\newline администрирования аналитических отчетов;
+  \item прикрепление аналитического источника данных к элементу визуализации на интерфейсе администрирования аналитических отчетов;
+  \item получение данных из шаблона визуалиации с пользовательскими параметрами и аналитического источника данных;
+  \item отображение объекта визуализации внутри интерфейса отображения аналитических отчетов.
+\end{itemize}
+
+\paragraph{Требования к эргономике и технической эстетике}
+Взаимодействие пользователя с web-интерфейсом подсистемы визуализации, входящим в состав программного комплекса «Web-Исполнение бюджета» должно осуществляться посредством визуального графического интерфейса (GUI). Внешний вид интерфейса подсистемы визуализации не должен отличаться от общего внешнего вида интерфейса всего программного комплекса.\par
+Интерфейс должен быть рассчитан на преимущественное использование манипулятора типа «мышь», то есть управление системой должно осуществляться с помощью набора экранных меню, кнопок и т. п. элементов. Клавиатурный режим ввода должен используется главным образом при заполнении и/или редактировании текстовых и числовых полей экранных форм.\par
+Все надписи экранных форм, а также сообщения, выдаваемые пользователю (кроме системных сообщений) должны быть на русском языке.
+
+\paragraph{Требования к эксплуатации, техническому обслуживанию, ремонту и хранению компонентов системы}
+Система должны быть рассчитана на эксплуатацию в составе программного комплекса «Web-Исполнение бюджета». Для нормальной эксплуатации разрабатываемой системы должно быть обеспечено бесперебойное питание ПЭВМ.\par
+Периодическое техническое обслуживание используемых ПК должно проводиться не реже одного раза в год.\par
+При вводе системы в опытную эксплуатацию должен быть разработан план резервного копирования программного обеспечения и обрабатываемой информации. Во время эксплуатации системы, персонал, ответственный за эксплуатацию системы должен выполнять разработанный план.\par
+Квалификация персонала и его подготовка должны соответствовать документации.
+
+\paragraph{Требования к патентной чистоте}
+Подсистема входит в состав «Web-Исполнение Бюджета», поэтому для использования необходима лицензионная версия этого программного продукта.
+
+\paragraph{Требования к численности и квалификации персонала}
+Для обслуживания модуля требуется один программист с базовыми знаниями языков программирования JavaScript, Java и понимающий внутреннее устройство программного комплекса «Web-Исполнение Бюджета».
+
+\paragraph{Требования к режиму работы персонала}
+Система реализуется на персональных компьютерах, поэтому требования к режиму отдыха и организации труда при работе с ней должны устанавливаться, исходя из требований к организации труда и режима отдыха при работе с этим типом средств вычислительной техники.\par
+Для обеспечения максимальной работоспособности и сохранения здоровья профессиональных пользователей на протяжении рабочей смены должны устанавливаться регламентированные перерывы: через 2 часа после начала рабочей смены и через 1.5 – 2.0 часа после обеденного перерыва продолжительностью 15 минут каждый или продолжительностью 10 минут через каждый час работы.\par
+Продолжительность непрерывной работы персонала с разрабатываемой системой и персональными компьютерами без регламентированного перерыва не должна превышать 2 часа.\par
+Деятельность персонала по эксплуатации системы должна регулироваться должностными инструкциями.
+
+\paragraph{Требования к надежности}
+Система должна сохранять работоспособность и обеспечивать восстановление своих функций при возникновении следующих внештатных ситуаций:\par
+\begin{itemize}
+	\item при сбоях в системе электроснабжения аппаратной части, приводящих к перезагрузке ОС, восстановление программы должно происходить после перезапуска ОС и запуска исполняемого файла системы;
+	\item при ошибках в работе аппаратных средств (кроме носителей данных и программ) восстановление функции системы возлагается на ОС;
+	\item при ошибках, связанных с программным обеспечением (ОС и драйверы устройств), восстановление работоспособности возлагается на ОС.\par
+\end{itemize}\par
+Для защиты аппаратуры от бросков напряжения и коммутационных помех должны применяться сетевые фильтры.
 
 \subsubsection{Требования к функциям, выполняемым системой}
 Подсистема визуализации аналитического отчета должна обеспечивать следующую функциональность:\par
@@ -143,7 +203,7 @@
 \end{itemize}\par
 Работа подсистемы предусматривает непрерывную круглосуточную работу и доступность сервисов программного продукта «Web-Исполнение бюджета» в режиме 24х7х365 (с учетом перерывов на техническое обслуживание).
 
-\subsubsection{Требования к организации входных данных}
+\paragraph{Требования к организации входных данных}
 Для компонента визуализации, который будет формировать непосредственно объект визуализации, требуется сформировать входные данные. Входными данными для компонента визуализации должен быть объект в удобном для передачи и чтения компонентом визуализации формате, сформированный после обработки аналитического источника данных и установленных пользователем параметров. Он должен включать в себя:\par
 \begin{itemize}
   \item тип отображаемой диаграммы (столбчатая, круговая, график);
@@ -163,63 +223,16 @@
 }]
 \end{lstlisting}
 
-\subsubsection{Требования к организации выходных данных}
+\paragraph{Требования к организации выходных данных}
 Выходными данными компонента визуализации должен быть блок HTML-кода, представляющий из себя графическое представление , диаграмму с интерактивными функциями взаимодействия:
 \begin{itemize}
   \item выделение столбца (если столбчатая диаграмма) или части диаграммы (если круговая диаграмма) при наведении;
   \item всплывающая подсказка с дополнительной информацией при наведении на столбец или часть круговой диаграммы.
 \end{itemize}
 
-\subsubsection{Требования к надежности}
-Система должна сохранять работоспособность и обеспечивать восстановление своих функций при возникновении следующих внештатных ситуаций:\par
-\begin{itemize}
-	\item при сбоях в системе электроснабжения аппаратной части, приводящих к перезагрузке ОС, восстановление программы должно происходить после перезапуска ОС и запуска исполняемого файла системы;
-	\item при ошибках в работе аппаратных средств (кроме носителей данных и программ) восстановление функции системы возлагается на ОС;
-	\item при ошибках, связанных с программным обеспечением (ОС и драйверы устройств), восстановление работоспособности возлагается на ОС.\par
-\end{itemize}\par
-Для защиты аппаратуры от бросков напряжения и коммутационных помех должны применяться сетевые фильтры.
+\subsubsection{Требования к видам обеспечения}
 
-\subsubsection{Требования к характеристикам взаимосвязей создаваемой системы со смежными системами}
-Подсистема визуализации отчетов должен взаимодействовать со следующими интерфейсами программного комплекса «Web-Исполнения бюджета»:\par
-\begin{itemize}
-  \item интерфейс создания и управления аналитическими источниками данных;
-  \item интерфейс администрирования аналитических отчетов;
-  \item интерфейс отображения аналитических отчетов.
-\end{itemize}\par
-Возможны следующие варианты взаимодействия с программным комплексом «Web-Исполнения бюджета»:
-\begin{itemize}
-  \item создание аналитического источника данных на интерфейсе создания и управления аналитическими источниками данных;
-  \item создание объекта визуализации посредством интерфейса администрирования аналитических отчетов;
-  \item заполнение шаблона визуализации отчета пользовательскими параметрами;
-  \item прикрепление аналитического источника данных к элементу визуализации на интерфейсе администрирования аналитических отчетов
-  \item получение данных из шаблона визуалиации с пользовательскими параметрами и аналитического источника данных;
-  \item отображение объекта визуализации внутри интерфейса отображения аналитических отчетов.
-\end{itemize}
-
-\subsubsection{Требования к эргономике и технической эстетике}
-Взаимодействие пользователя с web-интерфейсом подсистемы визуализации, входящим в состав программного комплекса «Web-Исполнение бюджета» должно осуществляться посредством визуального графического интерфейса (GUI). Внешний вид интерфейса подсистемы визуализации не должен отличаться от общего внешнего вида интерфейса всего программного комплекса.\par
-Интерфейс должен быть рассчитан на преимущественное использование манипулятора типа «мышь», то есть управление системой должно осуществляться с помощью набора экранных меню, кнопок и т. п. элементов. Клавиатурный режим ввода должен используется главным образом при заполнении и/или редактировании текстовых и числовых полей экранных форм.\par
-Все надписи экранных форм, а также сообщения, выдаваемые пользователю (кроме системных сообщений) должны быть на русском языке.
-
-\subsubsection{Требования к эксплуатации, техническому обслуживанию, ремонту и хранению компонентов системы}
-Система должны быть рассчитана на эксплуатацию в составе программного комплекса «Web-Исполнение бюджета». Для нормальной эксплуатации разрабатываемой системы должно быть обеспечено бесперебойное питание ПЭВМ.\par
-Периодическое техническое обслуживание используемых ПК должно проводиться не реже одного раза в год.\par
-При вводе системы в опытную эксплуатацию должен быть разработан план резервного копирования программного обеспечения и обрабатываемой информации. Во время эксплуатации системы, персонал, ответственный за эксплуатацию системы должен выполнять разработанный план.\par
-Квалификация персонала и его подготовка должны соответствовать документации.
-
-\subsubsection{Требования к патентной чистоте}
-Подсистема входит в состав «Web-Исполнение Бюджета», поэтому для использования необходима лицензионная версия этого программного продукта.
-
-\subsubsection{Требования к численности и квалификации персонала}
-Для обслуживания модуля требуется один программист с базовыми знаниями языков программирования JavaScript, Java и понимающий внутреннее устройство программного комплекса «Web-Исполнение Бюджета».
-
-\subsubsection{Требования к режиму работы персонала}
-Система реализуется на персональных компьютерах, поэтому требования к режиму отдыха и организации труда при работе с ней должны устанавливаться, исходя из требований к организации труда и режима отдыха при работе с этим типом средств вычислительной техники.\par
-Для обеспечения максимальной работоспособности и сохранения здоровья профессиональных пользователей на протяжении рабочей смены должны устанавливаться регламентированные перерывы: через 2 часа после начала рабочей смены и через 1.5 – 2.0 часа после обеденного перерыва продолжительностью 15 минут каждый или продолжительностью 10 минут через каждый час работы.\par
-Продолжительность непрерывной работы персонала с разрабатываемой системой и персональными компьютерами без регламентированного перерыва не должна превышать 2 часа.\par
-Деятельность персонала по эксплуатации системы должна регулироваться должностными инструкциями.
-
-\subsubsection{Требования к составу и параметрам технических средств сервера системы}
+\paragraph{Требования к составу и параметрам технических средств сервера системы}
 Требования к аппаратной части:\par
 \begin{itemize}
   \item серверный процессор - не менее 4 физических ядер;
@@ -234,7 +247,7 @@
   \item СУБД: PostgreSQL.
 \end{itemize}\par
 
-\subsubsection{Требования к составу и параметрам технических средств рабочего места пользователя}
+\paragraph{Требования к составу и параметрам технических средств рабочего места пользователя}
 Разрабатываемое программное обеспечение должно функционировать в операционных системах Windows XP(32-bit) / Vista (32- или 64-bit) / Windows 7 (32- или 64-bit).\par
 Минимальные требования к техническим характеристикам ПК пользователя:\par
 \begin{itemize}
@@ -248,10 +261,10 @@
   \item скорость передачи данных: от 256 Кбит/с при однопользовательской работе, от 1024 Кбит/с для 2-4 пользователей.
 \end{itemize}
 
-\subsubsection{Требования к программному обеспечению}
+\paragraph{Требования к программному обеспечению}
 Актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии ECMAScript 6 и старше). JavaScript-библиотека jQuery версии 3.1 и старше. JavaScript-библиотека D3.js версии 4.8.0 и старше. При использовании ЭП - криптографическое ПО.
 
-\subsubsection{Требования к документации на дипломный проект}
+\paragraph{Требования к документации на дипломный проект}
 В состав документации на дипломный проект входят следующие разделы и документы:\par
 Введение\par
 \qquad Определения, обозначения и сокращения\par
@@ -269,20 +282,20 @@
 Список литературы\par
 Приложения\par
 
-\section{Пояснительная записка}
+\subsection{Пояснительная записка}
 
-\subsection*{Введение}
-\addcontentsline{toc}{subsection}{Введение}
+\subsubsection*{Введение}
+\addcontentsline{toc}{subsubsection}{Введение}
 Наименование разрабатываемой системы приводится в техническом задании, раздел «2.1.1 Полное наименование системы и ее условное обозначение».\par
 Документы, на основании которых ведется проектирование, приводятся в техническом задании, раздел «2.1.2 Перечень документов, на основании которых создается система».\par
 Стадии и сроки исполнения приведены в техническом задании, раздел «2.1.3 Плановые сроки начала и окончания работы по созданию системы».
 
-\subsection{Назначение и области применения}
+\subsubsection{Назначение и области применения}
 Подсистема визуализации аналитических отчетов обеспечивает создание различных диаграмм. Подсистема используется в системах бизнес-аналитики и предназначена для повышения эффективности и для осуществления более качественного анализа большого количества аналитических данных.
 
-\subsection{Технические характеристики}
+\subsubsection{Технические характеристики}
 
-\subsubsection{Постановка задачи на разработку подсистемы}
+\paragraph{Постановка задачи на разработку подсистемы}
 Анализ предметной области выявил необходимость внедрения в программный комплекс «Web-Исполнение бюджета» подсистемы визуализации табличных отчетов, построенных на основе аналитических источников данных.\par
 Разрабатываемая подсистема должна решать следующие задачи:
 \begin{itemize}
@@ -293,7 +306,7 @@
   \item интегрировать объект визуализации в программный комплекс «Web-Исполнение бюджета».
 \end{itemize}\par
 
-\subsubsection{Описание общей структурной схемы и функционирования подсистемы}
+\paragraph{Описание общей структурной схемы и функционирования подсистемы}
 Подсистема визуализации встраивается в программный комплекс\newline «Web-Исполнение бюджета». Работа с подсистемой происходит в несколько этапов:\par
 \begin{itemize}
 	\item Для начала необходимо создать Аналитический источник данных.\par
@@ -315,7 +328,7 @@
 \label{ris2}
 \end{figure}\par
 
-\subsubsection{Описание и обоснование выбора метода организация входных и выходных данных}
+\paragraph{Описание и обоснование выбора метода организация входных и выходных данных}
 Входные данные представлены в виде JSON-объекта, который содержит данные из шаблона визуализации, параметры заданные на интерфейсе Администратор отчетов и данных из Аналитического источника. Выбор формата JSON обусловлен следующим:
 \begin{itemize}
 \item При написании компонента визуализации предполагается использовать JavaScript, а JSON - это текстовый формат основанный на JavaScript;
@@ -346,14 +359,14 @@
 \end{table}\par
 \end{itemize}
 
-\subsubsection{Описание и обоснование выбора состава технических и программных средств}
+\paragraph{Описание и обоснование выбора состава технических и программных средств}
 Для написания компонентов интеграции подсистемы визуализации аналитических отчетов в программный комплекс «Web-Исполнение бюджета» использован язык Java, а в качестве языка для написания клиентских и серверных скриптов использован язык JavaScript. Обосновано это тем, что программный комплекс «Web-Исполнение бюджета» является web-приложением, серверная часть которого написана на языке Java, а все взаимодействие JavaScript и HTML на стороне клиента происходит с помощью JavaScript-библиотеки jQuery.\par
 В качестве инструмента для написания компонента создания объекта визуализации используется JavaScript-библиотека D3.js. D3.js – это самый низкоуровневый инструмент для работы с языком разметки svg. Библиотека, в отличие от своих многочисленных аналогов, объединяет работу с SVG (базисом для работы с этим языком разметки является SVG API), CSS и DOM моделью, что является большим плюсом для программного комплекса "Web-Исполнение бюджета", которое является web-приложением. В отличие от своих аналогов библиотека предоставляет синтаксис схожий с синтаксисом JavaScript-библиотеки jQuery, что актуально для программного комплекса "Web-Исполнение бюджета", являющимся web-приложением. Большинство библиотек визуализации предоставляют готовые шаблоны для визуализации и не дают гибкого инструмента для построения своих шаблонов. D3.JS не имеет готовых реализаций шаблонов, но у нее есть огромная библиотека с примерами, написанными с ее помощью.\par
 Таким образом D3.JS была выбрана в качестве основного средства построения визуализации в подсистеме.
 
-\section{Описание программы}
+\subsection{Описание программы}
 
-\subsection{Общие сведения}
+\subsubsection{Общие сведения}
 Пользователь имеет возможность создания визуализации аналитического отчета на основе заранее сформированного разработчиком аналитического источника данных и настроенного им же объекта визуализации.\par
 Технология создания аналитического источника данных выглядит в виде таблицы, в которой разработчику предоставляется возможность установить наименование аналитического источника, написать события на языке JavaScript, которые будут отвечать за содержание данных во время подготовки параметров (событие На подготовку параметров), после закачки данных (событие После закачки) после формирования данных. В детализации требуется указать секции, из которых будут выкачиваться данные и колонки, то есть какие именно данные будут обрабатываться событиями.\par
 После создания аналитического источника разработчику необходимо создать шаблон и объект визуализации. Технология создания шаблона выглядит в виде модального окна, где задаются параметры будущей визуализации, такие как:
@@ -366,17 +379,17 @@
 Когда шаблон визуализации заполнен и сохранен требуется создать непосредственно объект визуализации. Для этого разработчику нужно выбрать и заполнить номер отчет, который будет содержать комбинацию групп цифр относящих его к определенной группе, наименование отчета, выбрать из списка шаблонов созданный ранее шаблон визуализации, так же выбрать формат отчета, то есть, в нашем случае, диаграмму (d3\_diagram) и выставить флаг использования (или снять флаг для внесения изменений в объект визуализации. Детализация содержит форму добавления аналитического источника данных из списка существующих и форму добавления пользовательских параметров для передачи механизму построения аналитического отчета или подсистеме визуализации аналитических отчетов.\par
 Когда пользователь запускает процесс построения визуализации, в действие приводятся написанные разработчиком события, формирующие аналитические данные, выбираются пользовательские параметры объекта аналитичекого отчета и параметры из шаблона визуализации. После того, как аналитические данные полностью сформировались, они формируются в JSON-объект вместе с пользовательскими параметрами объекта аналитичекого отчета и параметрами из шаблона визуализации и передаются компоненте построения визуализации.
 
-\subsubsection{Программное обеспечение, необходимое для функционирования программы}
+\paragraph{Программное обеспечение, необходимое для функционирования программы}
 Для функционирования подсистемы необходима актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой версии JavaScript 1.7 и старше). При использовании ЭП – криптографическое ПО.
 
-\subsubsection{Используемые при разработке языки программирования и инструментальные средства}
+\paragraph{Используемые при разработке языки программирования и инструментальные средства}
 Java – объектно–ориентированный структурный императивный язык программирования со строгой полиморфной статической явной системой типов. Программы на Java транслируются в байт-код, что делает их практически не зависимыми от операционной системы.\par
 JavaScript – это скриптовый язык, предназначенный для создания интерактивных веб-страниц. Его не требуется компилировать, он подключается к HTML-странице и работает "как есть". JavaScript обычно используется как встраиваемый язык для программного доступа к объектам приложений. Наиболее широкое применение находит в браузерах как язык сценариев для придания интерактивности веб-страницам.\par
 В качестве СУБД применяется PostgreSQL. Для организации версионного хранилища используется система контроля версий Mercurial (Hg) и TortoiseHg в качестве графического фронтенда.\par
 Для визуализации табличного аналитического отчета, то есть построения диаграммы была использована JavaScript библиотека D3.js.\par
 D3.js (название D3 расшифровывается как data driven document) - это JavaScript-библиотека для обработки и визуализации данных. Она предоставляет удобные утилиты для обработки и загрузки массивов данных и создания DOM-элементов.
 
-\subsection{Функциональное назначение}
+\subsubsection{Функциональное назначение}
 Функциональные возможности подсистемы визуализации аналитического отчета:\par
 \begin{itemize}
   \item возможность преобразовывать аналитический источник данных в удобный для передачи и чтения компонентом визуализации формат;
@@ -392,7 +405,7 @@ D3.js (название D3 расшифровывается как data driven d
   \item возможность интеграции объекта визуализации в программный комплекс «Web-Исполнение бюджета».
 \end{itemize}\par
 
-\subsection{Структура программы (модули, классы)}
+\subsubsection{Структура программы (модули, классы)}
 Структура разработанной подсистемы визуализации аналитических источников представленна на рисунках \hyperref[umlClassDiagram:ris1]{Рисунок 1} и \hyperref[umlClassDiagram:ris2]{Рисунок 2}.
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/FullDiagramDesigner.png}}
@@ -424,12 +437,44 @@ D3.js (название D3 расшифровывается как data driven d
 \item поле formats содержит список всех форматов отчетов, доступных в программном комплексе «Web-Исполнение бюджета».
 \end{itemize}
 
+\subsection{Пограмма и методика испытаний}
+
+\subsubsection{Объект испытаний}
+Объектом испытаний является подсистема визуализации аналитических отчетов. Данная подсистема предназначена для пользователей программного комплекса «Web-Исполнение Бюджета», чтобы обеспечить им возможность более эффективного анализа данных за счет их визуализации, представления этих данных в графическом представлении, в виде графиков или диаграмм.
+
+\subsubsection{Цель испытаний}
+Целью испытаний является проверка корректности работы тех функциональных частей продукта, которые полностью реализованы в процессе  работы.\par
+
+\subsubsection{Требования к программе}
+\begin{table}[H]
+\caption{Требования к программе}
+\centering
+  \begin{tabular}{|c|p{0.3\textwidth}|p{0.3\textwidth}|}
+  \hline
+  №  & Требование & Способ оценки & Примечание \\\hline
+  1  & Проверка корректности преобразования аналитического источника данных в JSON-объект & Запуск системы в режиме отладки в месте преобразования аналитического источника данных в JSON-объект \\\hline
+  2  & Проверка корректности заполнения формы Редактора шаблона (проверка на обязательность заполнения всех полей) & Запустить Редактор шаблона с интерфейса Администратор отчетов и проверить все поля на обязательное заполнение \\\hline
+  3  & Проверка корректности создания объекта визуализации в интерфейса Администратор отчетов & В интерфейса администратор отчетов создать документ, выбрать заполненный шаблон и соответствующий визуализации формат отчета\\\hline
+  4  & Проверка корректности исполнения фрагмента кода, отвечающего за сбор пользовательских параметров & Запуск системы в режиме отладки в месте сбора пользовательских параметров \\\hline
+  \end{tabular}
+\end{table}\par
+\begin{table}[H]
+\caption{Требования к программе}
+\centering
+  \begin{tabular}{|c|p{0.3\textwidth}|p{0.3\textwidth}|}
+  \hline
+  №  & Требование & Способ оценки \\\hline
+  5  & Проверка корректности объединения двух JSON-объектов (собранные пользовательские параметры и аналитичский источник данных) & Запуск системы в режиме отладки в месте объединения двух JSON-объектов \\\hline
+  6  & Проверка корректнного отображения визуализации в соответствии с заполненным шаблоном, пользовательскими параметрами и аналитическим источников & Выполнение созданной и заполненной визуализации на интерфейса Отчеты \\\hline
+  \end{tabular}
+\end{table}\par
+
 \section{Эксплуатационная документация}
 
 \subsection{Руководство системного программиста}
 
 \subsubsection{Назначение программы}
-Подсистема визуализации аналитических отчетов обеспечивает пользователям программного комплекса «Web-Исполнение Бюджета» возможностm более эффективного анализа данных за счет их визуализации, представления этих данных в графическом представлении, в виде графиков или диаграмм.
+Подсистема визуализации аналитических отчетов обеспечивает пользователям программного комплекса «Web-Исполнение Бюджета» возможность более эффективного анализа данных за счет их визуализации, представления этих данных в графическом представлении, в виде графиков или диаграмм.
 
 \subsubsection{Условия выполнения программы}
 Разрабатываемое программное обеспечение должно функционировать в операционных системах Windows XP(32-bit) / Vista (32- или 64-bit) / Windows 7 (32- или 64-bit).\par
